update modal styles to correct text padding and overflow for modal dialog

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -27,18 +27,20 @@ body {
     background: #fff;
     height: 100%;
     justify-content: center;
-    overflow-y: hidden;
-    padding: 20px;
+    overflow-y: auto;
     position: relative;
     width: 100%;
     @media screen and (min-width: 768px) {
       height: 50%;
       width: 60%;
-      overflow-y: scroll;
     }
     .button__modal-close {
       position: absolute;
-      right: 10px;
+      right: 20px;
+      top: 20px;
+    }
+    .modal__content {
+      padding: 20px;
     }
   }
 }
